/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package devtools.deviceaction.schemas.proto.action;

import "google/protobuf/duration.proto";
import "src/devtools/deviceaction/schemas/proto/base_spec.proto";
import "src/java/com/google/wireless/qa/mobileharness/shared/proto/spec/base_spec.proto";

option java_package = "com.google.devtools.deviceaction.framework.proto.action";
option java_multiple_files = true;

enum ResetOption {
  // If unspecified, will just clean up the apps.
  RESET_OPTION_UNSPECIFIED = 0;
  // 1 - 5 for factory reset option.
  TEST_HARNESS = 1;
  // 6 - max for flash option.
  OTA_SIDELOAD = 6;
  FASTBOOT_FLASH = 7;
  FASTBOOT_WITH_PARTITION_IMAGES = 8;
}

message ResetSpec {
  extend Unary {
    optional ResetSpec ext = 1001;
  }
  extend DeviceConfig {
    optional ResetSpec reset_spec = 1001;
  }
  extend mobileharness.shared.spec.DecoratorSpec {
    optional ResetSpec decorator_ext = 1001;
  }
  // Use tag recovery_modules to provide recovery modules.
  // Tag ota_package to provide ota package.
  // Tag image_zip to provide image zip.
  repeated FileSpec files = 1;
  optional ResetOption reset_option = 2;
  optional bool need_preload_modules_recovery = 3 [default = false];
  optional string flash_script = 4 [default = "flash-all.sh"];
  // The timeout may depend on the size of image file.
  optional google.protobuf.Duration flash_timeout = 5;
  // The timeout may depend on the size of ota package. It is usually > 10 min
  optional google.protobuf.Duration sideload_timeout = 6;
  // Use auto-reboot in side.
  optional bool use_auto_reboot = 7 [default = false];
}
